koostesivut body & new layout on front page

--- a/index.html
+++ b/index.html
@@ -6,94 +6,40 @@ tag: white
 <a name="page-top" id="page-top"></a>
 
 <section class="dubbelpadding sloganbox" id="sloganboxindex">
-    <h1 class="slogan text-center">handmade clean food for healthy skin</h1>
+    <h1 class="slogan text-center">clean food for healthy skin<br>-hand&shy;made</h1>
 </section>
 
 <a name="jumtarget" id="page-produkter"></a>
 
-<section class="produktkort dubbelpadding">
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front ten">
+<section class="produktgrupp">
+    <div class="card ten"><a href="/body">
                 <h1>body butters</h1>
-                <p>för kroppen</p>
-            </div>
-            <div class="flip-card-back">
-                <a href="/body">
-                    <img class="img-fluid" src="/img/DrHardmans_No22_Calming_Shea_Butter.png" />
-                </a>
-            </div>
-        </div>
+                <p>för kroppen</p></a>
     </div>
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front forty5">
-                <h1>&nbsp;face & neck&nbsp;</h1>
+     <div class="card forty5">
+                <h1>&nbsp;face, neck & lips&nbsp;</h1>
                 <p>för ansiktet</p>
-            </div>
-            <div class="flip-card-back">
-                <a href="/face">
-                    <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No32_Serendipity_Face_Oil.png"
-                         alt="Dr Hardman No.32 Serendipity Ansiktsolja">
-                </a>
-            </div>
-        </div>
     </div>
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front forty8">
+
+     <div class="card forty8">
                 <h1>hands & feet</h1>
                 <p>händer & fötter</p>
-            </div>
-            <div class="flip-card-back">
-                <a href="/pawsandclaws">
-                    <img class="img-fluid mx-auto pb-3"
-                         src="/img/DrHardmans_No48_Paws_and_Claws_Lavender_Hand_Cream.png"
-                         alt="Dr Hardman No.48 Hand Cream Paws and Claws Lavender">
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front fifty5">
+     </div>
+
+    <div class="card fifty5">
                 <h1>hair & scalp</h1>
                 <p>för håret</p>
-            </div>
-            <div class="flip-card-back">
-                <a href="/hair">
-                    <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No55_Shampoo_Bar.png"
-                         alt="Dr Hardman No.55 Shampoo Bar Citrus">
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front ten">
+     </div>
+
+
+    <div class="card ten">
                 <h1>hygiene & wash</h1>
                 <p>ren och fräsch</p>
-            </div>
-            <div class="flip-card-back">
-                <a href="/pitstopregular">
-                    <img class="img-fluid" src="/img/DrHardmansPitStop.png" alt="Dr Hardman No.10 pit stop natural deodorant"/>
-                </a>
-            </div>
-        </div>
     </div>
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front eighty1">
+
+   <div class="card eighty1">
                 <h1>masks & face mists</h1>
                 <p>masker och fuktgivare</p>
-            </div>
-            <div class="flip-card-back">
-                <a href="/masker-och-mists">
-                    <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No93_Hydrating_Face_Mist.png"
-                         alt="Dr Hardman No.93 Hydrating Facial Toner"/>
-                </a>
-            </div>
-        </div>
     </div>
 </section>
 
