--- a/no25-mangobodybutter.html
+++ b/no25-mangobodybutter.html
@@ -7,7 +7,7 @@ id: page-25
 ---
 
 <section class="dubbelpadding sloganbox" id="sloganbox10">
-    <h1 class="slogan text-center">If God was a fruit, he would have been a mango!</h1>
+    <h1 class="slogan text-center">If God was a fruit, he would be a mango!</h1>
 </section>
 
 <article class="padding grey">
