koostesivut hair, face, hygiene and page breadcrumb fixed

--- a/body.html
+++ b/body.html
@@ -1,12 +1,12 @@
 ---
-layout: default
+layout: page
 type: extra
 title: bodybutters
 id: body
 tag: white
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
-    <h1 class="slogan text-center">Hop in! -It works best on wet skin</h1>
+    <h1 class="slogan text-center">Hop in! -Body butters work best on wet skin</h1>
 </section>
 <section class="produktkort">
     <div class="flip-card">
@@ -80,7 +80,7 @@ tag: white
         </div>
     </div>
 </section>
-<section class="grey padding">
+<article class="grey padding">
   <a name="jumptarget" id="bodybutters"></a>
                 <h1>OM BODY BUTTERS</h1>
                 <hr class="primary" />
@@ -99,11 +99,6 @@ tag: white
                         <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
                         <br><a href="/no25-mangobodybutter">No 25 Mango Body Butter</a>
                         <br><a href="/no26-rosebodybutter">No 26 Rose Body Butter</a></p>
-
-                         <aside class="upbox">
-                         <a class="up" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-                        </aside>
-</section>
 
 
 
