--- a/braattveta.html
+++ b/braattveta.html
@@ -13,8 +13,8 @@ id: braattveta
         <li><a href="#bodybutters">Om Body Butters</a></li>
         <li><a href="#konserveringsmedel">Utan konserverings&shy;medel</a></li>
         <li><a href="#emulgeringsmedel">Utan emulgeringsmedel</a></li>
-        <li><a href="#phytoboosters">Om fytoaromatiska oljor</a></li>
-        <li><a href="#shampoobar">Om schampo i bit</a></li>
+        <li><a href="/face#phytoboosters">Om fytoaromatiska oljor</a></li>
+        <li><a href="/hair#shampoobar">Om schampo i bit</a></li>
         <li><a href="#vaxtextrakt">Om växtextrakt</a></li>
         <li><a href="#muslinduk">Om muslinduken</a></li>
         <li><a href="#drlottahardman">Om Dr Lotta Hardman</a></li>
