--- a/no24-cocoabodybutter.html
+++ b/no24-cocoabodybutter.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-type: produkter
+type: body
 title: Cocoa Body Butter
 comments: true
 id: page-24
@@ -9,7 +9,7 @@ id: page-24
     <h1 class="slogan text-center">The scent of a cookie jar, sweet sweet choko!</h1>
 </section>
 
-<article class="padding grey">
+<article class="padding">
     <header><h1>No 24 Cocoa Body Butter</h1></header>
     <p>Body Butter med kakaosmör, kokosolja och avokadosmör.<br>Vispat body butter i burk, 160ml.</p>
     <figure class="produktkort-singel">
