--- a/no55-shampoobar.html
+++ b/no55-shampoobar.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-type: produkter
+type: hair
 title: Shampoo Bar Citrus
 comments: true
 id: page-55
@@ -77,7 +77,7 @@ id: page-55
         särskilt om du har långt hår. Tillsätt lite varmt vatten i håret, om det känns som att löddret inte vill ta sig.
         Du kan också göra en kort mellansköljning och löddra upp igen, om det känns som det skulle behövas.
         <br>Då löddret är rikt, massera hårbotten ren med fingertopparna och skölj därefter håret noggrannt med varmt
-        vatten. Handdukstorka och tillsätt balsam eller annan vårdprodukt vid behov. <a href="/aloeconditioner">Dr
+        vatten. Handdukstorka och tillsätt balsam eller annan vårdprodukt vid behov. <a href="/no56-aloeconditioner">Dr
             Hardmans No. 56 leave-in balsamspray med aloe vera, glycerin och hampa </a> är speciellt utformad för att
         användas som vårdprodukt efter tvätt med schampo i bit.</p>
     <p>Förvara din schampobit som en vanlig bit tvål på ett luftigt underlag där vatten rinner av väl.</p>
@@ -85,7 +85,8 @@ id: page-55
     <p>Läs mer om schampo i bit på sidan <a target="_blank" href="/braattveta#shampoobar">bra att veta: Om schampo i
         bit</a></p>
     <h4>Dr Hardmans liknande produkter</h4>
-    <p><a href="/aloeconditioner">No 56 Aloe Vera Conditioner</a>
+    <p><a href="/no56-aloeconditioner">No 56 Aloe Vera Conditioner</a>
+        <br><a href="/no66-redrescuemask">No 66 Red Rescue Mask</a>
         <br><a href="/no80-gentle-face-wash-powder">No 80 Gentle Face Scrub Powder</a>
         <br><a href="/no67-cleansing-and-hydrating-face-mask">No 67 Cleansing and Hydrating Face Mask Powder</a>
         <!--<br><a href="/no68-tight-and-bright-face-mask">No 68 Tight and Bright Face Mask Powder</a>
