--- a/face.html
+++ b/face.html
@@ -1,10 +1,113 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+---
+layout: page
+type: face
+title: Facial Care
+id: face
+tag: white
+---
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center">Step by step, it will get better. Enjoy the climb!</h1>
+</section>
+<section class="produktkort">
+    <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front thirty">
+                    <h1>No 30</h1>
+                    <p>Clarified<br>Face Oil</p>
+                </div>
+                <div class="flip-card-back">
+                    <a href="/clarified">
+                        <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No30_Clarified_Face_Oil.png"
+                             alt="Dr Hardman No.30 Clarified Ansiktsolja">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front thirty1">
+                    <h1>No 31</h1>
+                    <p>Youthful Glow<br>Face Oil</p>
+                </div>
+                <div class="flip-card-back">
+                    <a href="/youthfulglow">
+                        <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No31_Youthful_Glow_Face_Oil.png"
+                             alt="Dr Hardman No.31 Youthful Glow Ansiktsolja">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front thirty2">
+                    <h1>No 32</h1>
+                    <p>Serendipity<br>Face Oil</p>
+                </div>
+                <div class="flip-card-back">
+                    <a href="/serendipity">
+                        <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No32_Serendipity_Face_Oil.png"
+                             alt="Dr Hardman No.32 Serendipity Ansiktsolja">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front forty4">
+                    <h1>No 44</h1>
+                    <p>Age Defence <br>Cream</p>
+                </div>
+                <div class="flip-card-back">
+                    <a href="/no44-agedefencecream">
+                        <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No44_Age_Defence_Cream.png"
+                             alt="Dr Hardman No.44 Age Defence Face Cream">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front forty5">
+                    <h1>No 45</h1>
+                    <p>Monoi<br>Lotion</p>
+                </div>
+                <div class="flip-card-back">
+                    <a href="/no45-monoilotion">
+                        <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No45_Monoi_Lotion.png"
+                             alt="Dr Hardman No. 45 Monoi Lotion">
+                    </a>
+                </div>
+            </div>
+        </div>
+</section>
+<article class="grey padding">
+<a name="jumptarget" id="phytoboosters"></a>
+                 <h1>Om fyto&shy;aromatiska oljor</h1>
+                                <hr class="primary" />
+                                <p>Dr Hardmans fytoaromatiska oljor är inte som din vanliga ansiktsolja. Våra koncentrerade ansiktsoljeserum är utformade för att ge näring åt huden samtidigt som de stöder behandling av specifika problem. Med vegetabiliska oljor och organiska botaniska extrakt av högsta kvalitet ger fytoboostern dig en kraftfull dos av näringsämnen och vitaminer samt en delikat arom.</p>
 
-</body>
-</html>
+                                        <a href="/youthfulglow"><img class="img-fluid profilbild spacing-unit" src="/img/hardman_faceoils.jpg" alt="DrHardman ansiktsoljor"></a>
+
+
+                                <h3>Fytoaromatiska ansiktosoljor kan användas på många olika sätt:</h3>
+
+                                    <h4>Som en potent hudkräm</h4>
+                    <p>ansiktsoljorna kan appliceras direkt på huden, på ansikte och hals precis som en vanlig hudkräm. Lätta och silkeslena absorberas de snabbt av huden och lämnar den mjuk och smidig.</p>
+                    <h4>Som vitamin-boost för någon annan kosmetisk produkt</h4> <p>Dr Hardmans ansiktsoljor är rika på vitaminer och vikiga näringsämnen och kan användas som tillskott för att förbättra egenskaperna hos i stort sett alla masker, krämer och lotioner. Den behagliga aromen från ansiktsoljorna kan också användas som aromterapi blandade i doftfria produkter.
+                </p>
+                    <h4>Som ansiktsmassageolja</h4> <p>näringsrika oljor som motverkar acne passar ypperligt för en effektiv ansiktsmassage.
+                </p>
+                    <h4>Som makeup primer</h4> <p>Dr Hardmans ansiktsoljor skapar en perfekt grund för din make-up bas utan silikoner eller andra syntetiska ingredienser.
+                </p>
+                    <h4>Som näringsrikt serum</h4> <p>fytoboosters tillför huden vitaminer och viktiga näringsämnen direkt från råvarorna och kan med fördel användas för att behandla olika hudåkommor precis som ett vanligt serum.
+                </p>
+                    <h4>Som mild aromaterapi</h4> <p>fina aromer från naturliga och ekologiska växtextrakt ger den traditionella aromaterapins fördelar men lämpar sig också för känsliga hudtyper.
+                </p>
+                                <h4>Dr Hardmans phytoboosters</h4>
+                                    <p><a href="/clarified">No 30 Clarified</a>
+                                    <br><a href="/youthfulglow">No 31 Youthful Glow</a>
+                                    <br><a href="/serendipity">No 32 Serendipity</a>
+                                </p>
+  <h4>Dr Hardmans ansiktskrämer</h4>
+  <p><a href="/no44-agedefencecream">No 44 Age Defence Cream ansiktssalva i burk</a>
+  <br><a href="/no45-monoilotion">No 45 Monoi Lotion ansiktssalva på tub</a></p>
