--- a/hygiene.html
+++ b/hygiene.html
@@ -1,10 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+---
+layout: page
+type: hygiene
+title: Hygiene and Wash
+id: hygiene
+tag: white
+---
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center">Naturally deodo&shy;rized and cleaned!</h1>
+</section>
+<section class="produktkort">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front ten">
+                    <h1>No 10</h1>
+                    <p>Pit Stop Regular<br>Deodorant</p>
+                </div>
+                <div class="flip-card-back">
+                    <a href="/pitstopregular">
+                        <img class="img-fluid" src="/img/DrHardmansPitStop.png" alt="Dr Hardman No.10 pit stop natural deodorant"/>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front eighty">
+                        <h1>No 80</h1>
+                        <p>Face Wash<br>Powder</p>
+                    </div>
+                    <div class="flip-card-back">
+                        <a href="no80-gentle-face-wash-powder">
+                            <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No80_Gentle_Face_Wash_Powder.png"
+                                 alt="Dr Hardman No.80 Face Wash Powder">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front eighty1">
+                        <h1>No 81</h1>
+                        <p>Lux Soap<br>ansiktstvål</p>
+                    </div>
+                    <div class="flip-card-back">
+                        <a href="no81-lux-soap">
+                            <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No81_lux_soapComingsoon.png"
+                                 alt="Dr Hardman No.81 Lux Soap">
+                        </a>
+                    </div>
+                </div>
+            </div>
+</section>
+<article class="grey padding">
+<h2>Naturlig deodorant</h2>
+                <hr class="primary" />
+                       <p><a href="/no22-sheabodybutter">No 22 Calming Shea Body Butter</a>
+                                        <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
+                                        <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
+                                        <br><a href="/no47-pawsandclawsraw">No 47 Paws and Claws Raw</a>
+                                        <br><a href="/no48-pawsandclawslavender">No 48 Paws and Claws Lavender</a>
+                                        <br><a href="/no49-pawsandclawsvanilla">No 49 Paws and Claws Vanilla-Orange</a>
+                                        </p>
