--- a/no23-citrusbodybutter.html
+++ b/no23-citrusbodybutter.html
@@ -1,16 +1,16 @@
 ---
 layout: page
-type: produkter
+type: body
 title: Citrus Body Butter
 comments: true
 id: page-23
 ---
 
-<section class="dubbelpadding sloganbox" id="sloganbox10">
+<section class="dubbelpadding sloganbox" id="sloganboxlow">
     <h1 class="slogan text-center">Have an antioxidant shower of sunshine!</h1>
 </section>
 
-<article class="padding grey">
+<article class="padding">
     <header><h1>No 23 Citrus Body Butter</h1></header>
     <p>Oraffinerat sheasmör med avokado och aloe vera samt eteriska citrusoljor.<br>Vispat body butter i burk, 160ml.</p>
     <figure class="produktkort-singel">
