--- a/no26-rosebodybutter.html
+++ b/no26-rosebodybutter.html
@@ -1,39 +1,38 @@
 ---
 layout: page
-type: produkter
+type: body
 title: Rose Body Butter
 comments: true
 id: page-26
+tag: white
 ---
 
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No26_Rose_Body_Butter_open.png" alt="DrHardman No26 Rose Body Butter">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 26 Rose Body Butter</h1>
-                <h3>Ett näringsrikt kroppssmör med len rosendoft.<br>Vispat body butter i burk med skruvlock, 160ml.</h3>
-                <h1 class="pris">15,00 € *</h1>
-                <p class="small">* Rekopris. I Sverige 140 kr.</p>
 
-            </div>
-        </div>
-    </div>
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center"></h1>
 </section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
+<article class="padding grey">
+     <header><h1>No 26 Rose Body Butter</h1></header>
+          <p>Ett näringsrikt kroppssmör med len rosendoft.<br>Vispat body butter i burk med skruvlock, 160ml.</p>
+                <figure class="produktkort-singel">
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                                <div class="flip-card-front">
+                                    <img class="img-fluid" src="/img/DrHardmans_No26_Rose_Body_Butter_open.png" alt="DrHardman No26 Rose Body Butter">
+                                </div>
+                                <div class="flip-card-back">
+                                    <img class="img-fluid" src="/img/DrHardmans_No26_Rose_Body_Butter.png" alt="DrHardman No26 Rose Body Butter">
+                                </div>
+                            </div>
+                        </div>
+                    </figure>
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
-                    <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
+          <h1 class="pris">15,00 € *</h1>
+          <p class="small">* Rekopris. I Sverige 140 kr.</p>
+            <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
 
-                    <h4>BRA FÖR:</h4>
+                    <h3>BRA FÖR</h3>
                     <ul class="ingredienslista">
                         <li>Daglig fuktgivare</li>
                         <li>Daglig mjukgörare</li>
@@ -48,45 +47,30 @@ id: page-26
                         <li>Aromaterapi för hormonbalans och bättre libido</li>
                         <li>VEGAN</li>
                     </ul>
-                    <h4>INGREDIENSER:</h4>
+                    <h3>INGREDIENSER</h3>
                     <p>
-                        <a href="/ingredienser">kokosolja°*<sup>◆</sup></a>
-                        <a href="/ingredienser">sheasmör°*<sup>◆</sup></a>
-                        <a href="/ingredienser">mangosmör,</a>
-                        <a href="/ingredienser">vindruvskärneolja,</a>
-                        <a href="/ingredienser">granatäppelolja°</a>
-                        <a href="/ingredienser">eteriska oljor från ros, rosmarin och pelargon,</a>
-                        <a href="/ingredienser">vitamin E</a>
+                        kokosolja°*<sup>◆</sup>
+                       sheasmör°*<sup>◆</sup>
+                        mangosmör,
+                       vindruvskärneolja,
+                        granatäppelolja°
+                        eteriska oljor från ros, rosmarin och pelargon,
+                        vitamin E
                     </p>
 
-                    <p>° Ekologisk
+                    <p class="small">° Ekologisk
                         <br>* Rättvis handel
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
-                </div>
-            </div>
 
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
+                <h2 class="om">Om denhär produkten</h2>
                 <hr class="primary" />
                 <p>Dr Hardman's Rose Body Butter är den lenaste dagliga fuktgivaren i vårt sortiment med högklassiga ekologiska oraffinerade ingredienser och en mjuk förförande rosendoft.
-                    <br>Förutom det genomgoda sheasmöret innehåller Rose Body Butter liksom <a href="/mangobodybutter">No 25 Mango Body Butter</a> mangosmör som är oerhört återfuktande, fungerar exemplariskt på torr hud och på problemområden som torra knän och armbågar. Har naturligt UV skydd, stöder hudens flexibilitet samt verkar skyddande för åldrande hudceller.
+                    <br>Förutom det genomgoda sheasmöret innehåller Rose Body Butter liksom <a href="/no25-mangobodybutter">No 25 Mango Body Butter</a> mangosmör som är oerhört återfuktande, fungerar exemplariskt på torr hud och på problemområden som torra knän och armbågar. Har naturligt UV skydd, stöder hudens flexibilitet samt verkar skyddande för åldrande hudceller.
                     <br>Eteriska oljor från ros och pelargon är antimikrobiella, motverkar acne, minskar symptom av rosacea, samt hjälper de andra ingredienserna i kroppssmöret att tränga djupt in i huden. Eterisk olja från rosmarin lindrar muskel- och ledvärk, har avslappnande inverkan och positiv inverkan på minnesfunktionerna.</p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Body Butter</a>
+                <h4>Dr Hardmans liknande produkter</h4>
+                    <p><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Body Butter</a>
                     <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
                     <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
-                    <br><a href="/no25-mangobodybutter">No 25 Mango Body Butter</a></p>
+                    <br><a href="/no25-mangobodybutter">No 25 Mango Body Butter</a>
                 </p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
