--- a/no56-aloeconditioner.html
+++ b/no56-aloeconditioner.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-type: produkter
+type: hair
 title: Aloe Vera Spray Conditioner
 comments: true
 id: page-56
@@ -67,7 +67,8 @@ id: page-56
         Hjälper reda ut trassligt hår och ger håret en hälsosam glans och lyster. Renar hårbotten och stimulerar
         hårtillväxt. Tar bort rester av schamponeringen ur håret och återställer hårets och hårbottens naturliga pH.
         Spraya i handukstorrt hår och skölj inte ur. Passar alla hårtyper. Skaka flaskan före användning. Använd efter
-        varje tvätt med <a href="/shampoobar">Dr Hardmans No. 55 schampo i bit</a> eller så ofta det behövs.</p>
+        varje tvätt med <a href="/no55-shampoobar">Dr Hardmans No. 55 schampo i bit</a> eller så ofta det behövs.</p>
     <h4>Dr Hardmans liknande produkter</h4>
-    <p><a href="/shampoobar">No 55 Shampoo Bar Citrus</a>
+    <p><a href="/no55-shampoobar">No 55 Shampoo Bar Citrus</a>
+    <br><a href="/no66-redrescuemask">No 66 Red Rescue Mask</a>
     </p>
