alla sidor fixade

--- a/alla-produkter.html
+++ b/alla-produkter.html
@@ -18,7 +18,7 @@ tag: white
                 <p>Pit Stop Regular<br>Deodorant</p>
             </div>
             <div class="flip-card-back">
-                <a href="/pitstopregular">
+                <a href="/no10-pitstopregular">
                     <img class="img-fluid" src="/img/DrHardmansPitStop.png" alt="Dr Hardman No.10 pit stop natural deodorant"/>
                 </a>
             </div>
@@ -271,7 +271,7 @@ tag: white
                 <p>Vanilla-Choko<br>Lip Balm</p>
             </div>
             <div class="flip-card-back">
-                <a href="/lipbalm">
+                <a href="/no70-lipbalm">
                     <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No70_Vanilla_Choko_Lip_Balm.png"
                          alt="Dr Hardman No.70 Choko-Vanilla Lip Balm">
                 </a>
@@ -285,7 +285,7 @@ tag: white
                 <p>Vitamin<br>Lip Balm</p>
             </div>
             <div class="flip-card-back">
-                <a href="/lipbalmvitamin">
+                <a href="/no71-lipbalmvitamin">
                     <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No71_Vitamin_Lip_Balm.png"
                          alt="Dr Hardman No.71 Vitamin Lip Balm">
                 </a>
@@ -314,7 +314,7 @@ tag: white
             </div>
             <div class="flip-card-back">
                 <a href="no81-lux-soap">
-                    <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No81_lux_soapComingsoon.png"
+                    <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No81_lux_soap2.png"
                          alt="Dr Hardman No.81 Lux Soap">
                 </a>
             </div>
