--- a/face.html
+++ b/face.html
@@ -16,7 +16,7 @@ tag: white
                     <p>Clarified<br>Face Oil</p>
                 </div>
                 <div class="flip-card-back">
-                    <a href="/clarified">
+                    <a href="/no30-clarified">
                         <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No30_Clarified_Face_Oil.png"
                              alt="Dr Hardman No.30 Clarified Ansiktsolja">
                     </a>
@@ -30,7 +30,7 @@ tag: white
                     <p>Youthful Glow<br>Face Oil</p>
                 </div>
                 <div class="flip-card-back">
-                    <a href="/youthfulglow">
+                    <a href="/no31-youthfulglow">
                         <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No31_Youthful_Glow_Face_Oil.png"
                              alt="Dr Hardman No.31 Youthful Glow Ansiktsolja">
                     </a>
@@ -44,7 +44,7 @@ tag: white
                     <p>Serendipity<br>Face Oil</p>
                 </div>
                 <div class="flip-card-back">
-                    <a href="/serendipity">
+                    <a href="/no32-serendipity">
                         <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No32_Serendipity_Face_Oil.png"
                              alt="Dr Hardman No.32 Serendipity Ansiktsolja">
                     </a>
@@ -79,6 +79,34 @@ tag: white
                 </div>
             </div>
         </div>
+         <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front seventy">
+                        <h1>No 70</h1>
+                        <p>Vanilla-Choko<br>Lip Balm</p>
+                    </div>
+                    <div class="flip-card-back">
+                        <a href="/no70-lipbalm">
+                            <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No70_Vanilla_Choko_Lip_Balm.png"
+                                 alt="Dr Hardman No.70 Choko-Vanilla Lip Balm">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front seventy1">
+                        <h1>No 71</h1>
+                        <p>Vitamin<br>Lip Balm</p>
+                    </div>
+                    <div class="flip-card-back">
+                        <a href="/no71-lipbalmvitamin">
+                            <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No71_Vitamin_Lip_Balm.png"
+                                 alt="Dr Hardman No.71 Vitamin Lip Balm">
+                        </a>
+                    </div>
+                </div>
+            </div>
 </section>
 <article class="grey padding">
 <a name="jumptarget" id="phytoboosters"></a>
@@ -86,7 +114,7 @@ tag: white
                                 <hr class="primary" />
                                 <p>Dr Hardmans fytoaromatiska oljor är inte som din vanliga ansiktsolja. Våra koncentrerade ansiktsoljeserum är utformade för att ge näring åt huden samtidigt som de stöder behandling av specifika problem. Med vegetabiliska oljor och organiska botaniska extrakt av högsta kvalitet ger fytoboostern dig en kraftfull dos av näringsämnen och vitaminer samt en delikat arom.</p>
 
-                                        <a href="/youthfulglow"><img class="img-fluid profilbild spacing-unit" src="/img/hardman_faceoils.jpg" alt="DrHardman ansiktsoljor"></a>
+                                        <a href="/youthfulglow"><img class="img-fluid profilbild spacing-unit" src="/img/flipcard-face.jpg" alt="DrHardman ansiktsoljor"></a>
 
 
                                 <h3>Fytoaromatiska ansiktosoljor kan användas på många olika sätt:</h3>
@@ -111,3 +139,6 @@ tag: white
   <h4>Dr Hardmans ansiktskrämer</h4>
   <p><a href="/no44-agedefencecream">No 44 Age Defence Cream ansiktssalva i burk</a>
   <br><a href="/no45-monoilotion">No 45 Monoi Lotion ansiktssalva på tub</a></p>
+   <h4>Dr Hardmans läppomada</h4>
+ <p><a href="/no70-lipbalm">No 70 Läppomada vanilj-choklad</a>
+ <br><a href="/no71-lipbalmvitamin">No 71 Läppomada med massor vitaminer</a></p>
