--- a/hands-and-feet.html
+++ b/hands-and-feet.html
@@ -6,7 +6,7 @@ id: hands
 tag: white
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
-    <h1 class="slogan text-center">cracked chapped scarred or sandpaper dry? It won't be like that tomorrow!</h1>
+    <h1 class="slogan text-center">These feet are made for walkin'</h1>
 </section>
 <section class="produktkort">
     <div class="flip-card">
@@ -76,7 +76,7 @@ tag: white
 
                                     <br>Other products on the market contain refined white shea butter. Refined shea butter has been stripped of its nourishing properties and supplemented with extra ingredients to replace those lost in the refining process.</p>
 
-                                    <h4>Pröva andra av Dr Hardmans produkter som innehåller det välgörande oraffrinerade ekologiska sheasmöret, tillexempel:</h4>
+                                    <h4>Pröva andra av Dr Hardmans produkter som innehåller det råa ekologiska sheasmöret, tillexempel:</h4>
                                         <p><a href="/no22-sheabodybutter">No 22 Calming Shea Body Butter</a>
                                         <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
                                         <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
