--- a/no23-citrusbodybutter.html
+++ b/no23-citrusbodybutter.html
@@ -4,6 +4,7 @@ type: body
 title: Citrus Body Butter
 comments: true
 id: page-23
+tag: white
 ---
 
 <section class="dubbelpadding sloganbox" id="sloganboxlow">
