--- a/no48-pawsandclawslavender.html
+++ b/no48-pawsandclawslavender.html
@@ -10,7 +10,7 @@ tag: pink
 
 
 <section class="dubbelpadding sloganbox" id="sloganbox10">
-    <h1 class="slogan text-center">The stuff sweet dreams are made of</h1>
+    <h1 class="slogan text-center">cracked scarred or just dry? It won't be tomorrow!</h1>
 </section>
 
 
