--- a/no67-cleansing-and-hydrating-face-mask.html
+++ b/no67-cleansing-and-hydrating-face-mask.html
@@ -1,38 +1,38 @@
 ---
 layout: page
-type: produkter
+type: masks and mists
 title: Cleansing and hydrating face mask powder
 comments: true
 id: page-67
+tag: white
 ---
 
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No67_Face_Mask_powder.png">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 67 Cleansing and hydrating face mask powder</h1>
-                <h3>En lyxig fuktande och renande lermask för alla hudtyper.<br>Burk med skruvlock, 100ml.</h3>
-                <h1 class="pris">12,00 € *</h1>
+           <section class="dubbelpadding sloganbox" id="sloganbox10">
+               <h1 class="slogan text-center">Smooth and sooth :)</h1>
+           </section>
+
+           <article class="padding grey">
+               <header><h1>No 67 Cleansing and hydrating face mask powder</h1></header>
+                <p>En lyxig fuktande och renande lermask för alla hudtyper.<br>Burk med skruvlock, 100ml.</p>
+                <figure class="produktkort-singel">
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                                <div class="flip-card-front">
+                                    <img class="img-fluid" src="/img/DrHardmans_No67_Face_Mask_powder.png" alt="Dr Hardmans lermask No 67">
+                                </div>
+                                <div class="flip-card-back">
+                                    <img class="img-fluid" src="/img/DrHardmans_No67_Face_Mask_powder.png" alt="Dr Hardmans lermask No 67">
+                                </div>
+                            </div>
+                        </div>
+                    </figure>
+
+                <h2 class="pris">12,00 € *</h2>
                 <p class="small">* Rekopris. I Sverige 120 kr.</p>
-            </div>
-        </div>
-    </div>
-</section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
-
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
                     <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
 
-                    <h4>BRA FÖR:</h4>
+                    <h3>BRA FÖR</h3>
                     <ul class="ingredienslista">
                         <li>Alla hudtyper</li>
                         <li>Känslig hy</li>
@@ -44,53 +44,36 @@ id: page-67
                         <li>Gör huden ljusare</li>
                         <li>VEGAN</li>
                     </ul>
-                    <h4>INGREDIENSER:</h4>
+                    <h3>INGREDIENSER</h3>
                     <p>
-                        <a href="/ingredienser">kaolin,</a>
-                        <a  href="/ingredienser">havre°*<sup>◆</sup>(lokal finsk råvara)</a>
-                        <a  href="/ingredienser">jordgubbsfrön°<sup>◆</sup></a>
-                        <a  href="/ingredienser">videbark <i>Salix alba</i>,</a>
-                        <a  href="/ingredienser">tranbär°*<sup>◆</sup>(lokal finsk råvara)</a>
-                        <a  href="/ingredienser">lingon°*<sup>◆</sup>(lokal finsk råvara)</a>
-                        <a  href="/ingredienser">havtorn°*<sup>◆</sup>(finsk råvara)</a>
-                        <a  href="/ingredienser">banan,</a>
-                        <a href="/ingredienser">rosenblad,</a>
-                        <a  href="/ingredienser">mjölksyrabakterier (<i>Lactobacillus rhamnosus GG</i>, finsk råvara)</a>
+                        kaolin,
+                        havre°*<sup>◆</sup>(lokal finsk råvara)
+                       jordgubbsfrön°<sup>◆</sup>
+                        videbark <i>Salix alba</i>,
+                       tranbär°*<sup>◆</sup>(lokal finsk råvara)
+                       lingon°*<sup>◆</sup>(lokal finsk råvara)
+                       havtorn°*<sup>◆</sup>(finsk råvara)
+                       banan,
+                        rosenblad,
+                        mjölksyrabakterier (<i>Lactobacillus rhamnosus GG</i>, finsk råvara)
                     </p>
 
-                    <p>° Ekologisk
+                    <p class="small">° Ekologisk
                         <br>* Rättvis handel
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
 
-                </div>
-            </div>
-
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
+                <h2 class="om">Om denhär produkten</h2>
                 <hr class="primary" />
                 <p>Dr Hardmans renande och fuktande ansiktsmask med lätt peeling-effekt säljs i pulverform för att hålla länge! C-vitamininnehållet bevaras också längre i ett pulver än i en lösning.</p>
-                <p><strong>Användning:</strong> Blanda ca två teskedar pulver åt gången med lika mängd havremjölk, naturell yoghurt eller <a href="/no90-refreshing-face-mist">DrHardmans ansiktsvatten No 90</a> till en mjuk lera och gnid den på huden med runda rörelser. För extra effekt kan man också ringla i lite honung. Du kan lätt själv bestämma koncistensen genom att lägga till mer eller mindre vätska. Låt verka tills masken stelnat helt (minst 20-30min). Blöt en muslinduk/tunn trasa i ljummet vatten och lägg den över masken för att blöta upp den. Torka sedan av masken med det blötta och ursköljda tygstycket. Använd masken 1-2 gånger i veckan på väl rengjord hud.</p>
+                <p><strong>Användning:</strong> Blanda ca två teskedar pulver åt gången med lika mängd havremjölk, naturell yoghurt eller <a href="/no93-hydrating-face-mist">DrHardmans ansiktsvatten No 93</a> till en mjuk lera och gnid den på huden med runda rörelser. För extra effekt kan man också ringla i lite honung. Du kan lätt själv bestämma koncistensen genom att lägga till mer eller mindre vätska. Låt verka tills masken stelnat helt (minst 20-30min). Blöt en muslinduk/tunn trasa i ljummet vatten och lägg den över masken för att blöta upp den. Torka sedan av masken med det blötta och ursköljda tygstycket. Använd masken 1-2 gånger i veckan på väl rengjord hud.</p>
                 <p>Kaolin och havre renar huden och tillför en lätt peeling-effekt. Havre och videbark lugnar inflammationer och motverkar torr hy samt exem och akne tack vare sina antiseptiska egenskaper. Havre tillför också huden B-vitamin och mineraler. Bärpulvren är goda antioxidanter och tillför vitamin C som som stimulerar ytlig blodcirkulation och kollagenproduktion, gör huden ljusare och jämnare, förminskar porerna och minskar mängden pormaskar. För ett extra bra resultat, använd <a href="/no80-gentle-face-wash-powder">Dr Hardmans No. 80 Gentle Face Scrub</a> peeling före masken.</p>
                 <p>Pulvret är ljusrött, doftar milt och gott och håller ca 6 månader. Förvara svalt och mörkt.</p>
-                <p>Använd gärna ett <a href="/no90-refreshing-face-mist">DrHardmans ansiktsvatten</a> efter ansiktsmasken påföljt av ett <a href="/serendipity">ansiktsserum</a> och/eller <a href="/agedefence">ansiktskräm</a>.</p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/no80-gentle-face-wash-powder">No 80 Gentle Face Scrub Powder för normal till fet hy</a>
+                <p>Använd gärna ett <a href="/no90-refreshing-face-mist">DrHardmans ansiktsvatten</a> efter ansiktsmasken påföljt av ett <a href="/no32-serendipity">ansiktsserum</a> och/eller <a href="/no44-agedefence">ansiktskräm</a>.</p>
+                <h4>Dr Hardmans liknande produkter</h4>
+                    <p><a href="/no80-gentle-face-wash-powder">No 80 Gentle Face Scrub Powder för normal till fet hy</a>
                     <br><a href="/no68-tight-and-bright-face-mask">No 68 Tight and Bright Face Mask Powder för alla hudtyper</a>
                     <br><a href="/no90-refreshing-face-mist">No 90 Refreshing Face Mist för alla hudtyper</a>
                     <br><a href="/no91-calming-face-mist">No 91 Calming Face Mist för torr eller känslig hy</a>
-                    <!--<br><a href="/no92-purifying-face-mist">No 92 Purifying Face Mist för blandhy och fet hy</a>-->
                     <br><a href="/no93-hydrating-face-mist">No 93 Hydrating Face Mist för normal, torr eller åldrande hy</a>
                 </p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
