--- a/no80-gentle-face-wash-powder.html
+++ b/no80-gentle-face-wash-powder.html
@@ -1,9 +1,10 @@
 ---
 layout: page
-type: produkter
+type: hygiene
 title: Face Wash Powder
 comments: true
 id: page-80
+tag: white
 ---
 
 <section class="padding">
