--- a/hygiene.html
+++ b/hygiene.html
@@ -6,7 +6,7 @@ id: hygiene
 tag: white
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
-    <h1 class="slogan text-center">Naturally deodo&shy;rized and cleaned!</h1>
+    <h1 class="slogan text-center">Fresh as a flower, naturally.</h1>
 </section>
 <section class="produktkort">
         <div class="flip-card">
@@ -16,7 +16,7 @@ tag: white
                     <p>Pit Stop Regular<br>Deodorant</p>
                 </div>
                 <div class="flip-card-back">
-                    <a href="/pitstopregular">
+                    <a href="/no10-pitstopregular">
                         <img class="img-fluid" src="/img/DrHardmansPitStop.png" alt="Dr Hardman No.10 pit stop natural deodorant"/>
                     </a>
                 </div>
@@ -29,7 +29,7 @@ tag: white
                         <p>Face Wash<br>Powder</p>
                     </div>
                     <div class="flip-card-back">
-                        <a href="no80-gentle-face-wash-powder">
+                        <a href="/no80-gentle-face-wash-powder">
                             <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No80_Gentle_Face_Wash_Powder.png"
                                  alt="Dr Hardman No.80 Face Wash Powder">
                         </a>
@@ -43,8 +43,8 @@ tag: white
                         <p>Lux Soap<br>ansiktstvål</p>
                     </div>
                     <div class="flip-card-back">
-                        <a href="no81-lux-soap">
-                            <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No81_lux_soapComingsoon.png"
+                        <a href="/no81-lux-soap">
+                            <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No81_lux_soap2.png"
                                  alt="Dr Hardman No.81 Lux Soap">
                         </a>
                     </div>
