--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ tag: white
             <br><a href="/no24-cocoabodybutter">DrH <strong>no.24</strong> COCOA BODY BUTTER</a>
             <br><a href="/no25-mangobodybutter">DrH <strong>no.25</strong> MANGO BODY BUTTER</a>
             <br><a href="/no26-rosebodybutter">DrH <strong>no.26</strong> ROSE BODY BUTTER</a>
-            <!--<br><a href="/clarified">DrH <strong>no.30</strong> CLARIFIED ansiktsolja</a>-->
-            <br><a href="/youthfulglow">DrH <strong>no.31</strong> YOUTHFUL GLOW ansiktsolja</a>
-            <br><a href="/serendipity">DrH <strong>no.32</strong> SERENDIPITY ansiktsolja</a>
+            <br><a href="/no30-clarified">DrH <strong>no.30</strong> CLARIFIED ansiktsolja</a>
+            <br><a href="/no32-youthfulglow">DrH <strong>no.31</strong> YOUTHFUL GLOW ansiktsolja</a>
+            <br><a href="/no32-serendipity">DrH <strong>no.32</strong> SERENDIPITY ansiktsolja</a>
             <br><a href="/no44-agedefence">DrH <strong>no.44</strong> AGE DEFENCE CREAM ansiktskräm</a>
             <br><a href="/no45-monoilotion">DrH <strong>no.45</strong> MONOI LOTION ansiktskräm</a>
             <br><a href="/no47-pawsandclawsraw">DrH <strong>no.47</strong> PAWS AND CLAWS raw Hand/fotkräm utan dofttillsats</a>
@@ -84,8 +84,6 @@ tag: white
             <br><a href="/no70-lipbalm">DrH <strong>no.70</strong> LÄPPOMADA vanilj-choklad</a>
             <br><a href="/no71-lipbalmvitamin">DrH <strong>no.71</strong> LÄPPOMADA med massor vitaminer</a>
             <br><a href="/no80-gentle-face-wash-powder">DrH <strong>no.80</strong> GENTLE FACE WASH ansiktsrengöring</a>
-            <!--<br><a href="/no90-refreshing-face-mist">DrH <strong>no.90</strong> REFRESHING FACE MIST ansiktsvatten</a>
-            <br><a href="/no92-purifying-face-mist">DrH <strong>no.92</strong> PURIFYING FACE MIST ansiktsvatten</a>-->
             <br><a href="/no93-hydrating-face-mist">DrH <strong>no.93</strong> HYDRATING FACE MIST ansiktsvatten</a>
 
         </p>
