--- a/no22-calmingsheabodybutter.html
+++ b/no22-calmingsheabodybutter.html
@@ -4,6 +4,7 @@ type: body
 title: Calming Shea Butter
 comments: true
 id: page-22
+tag: white
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
     <h1 class="slogan text-center">Tame that razor effect! No itch no more.</h1>
