--- a/no24-cocoabodybutter.html
+++ b/no24-cocoabodybutter.html
@@ -4,6 +4,7 @@ type: body
 title: Cocoa Body Butter
 comments: true
 id: page-24
+tag: white
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
     <h1 class="slogan text-center">The scent of a cookie jar, sweet sweet choko!</h1>
