--- a/no25-mangobodybutter.html
+++ b/no25-mangobodybutter.html
@@ -4,6 +4,7 @@ type: body
 title: Mango Body Butter
 comments: true
 id: page-25
+tag: white
 ---
 
 <section class="dubbelpadding sloganbox" id="sloganbox10">
