--- a/no55-shampoobar.html
+++ b/no55-shampoobar.html
@@ -4,6 +4,7 @@ type: hair
 title: Shampoo Bar Citrus
 comments: true
 id: page-55
+tag: white
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
     <h1 class="slogan text-center">One day I tell her...<br>I love her hair</h1>
