--- a/no56-aloeconditioner.html
+++ b/no56-aloeconditioner.html
@@ -4,6 +4,7 @@ type: hair
 title: Aloe Vera Spray Conditioner
 comments: true
 id: page-56
+tag: white
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
     <h1 class="slogan text-center">One day I tell her...<br>I love her hair</h1>
