--- a/no66-redrescuemask.html
+++ b/no66-redrescuemask.html
@@ -4,36 +4,35 @@ type: hair
 title: Red Rescue Mask
 comments: true
 id: page-66
+tag: white
 ---
 
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No66_Red_Rescue_Mask.png" alt="DrhHardmans ">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 66 Red Rescue Mask</h1>
-                <h3>Karotenrik hårinpackning och ansiktsmask.<br>Burk med skruvlock, 100ml.</h3>
-                <h1 class="pris">17,00 € *</h1>
-                <p class="small">* Rekopris. I Sverige 160 kr.</p>
-
-            </div>
-        </div>
-    </div>
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+       <h1 class="slogan text-center">Light and shine!</h1>
 </section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
+<article class="padding grey">
+    <header><h1>No 66 Red Rescue Mask</h1></header>
+     <p>Karotenrik hårinpackning och ansiktsmask.<br>Burk med skruvlock, 100ml.</p>
+    <figure class="produktkort-singel">
+        <div class="flip-card">
+             <div class="flip-card-inner">
+                 <div class="flip-card-front">
+                     <img class="img-fluid" src="/img/DrHardmans_No66_Red_Rescue_Mask.png" alt="Dr Hardman No.66 Red Rescue Mask">
+                      </div>
+                 <div class="flip-card-back">
+                      <img class="img-fluid" src="/img/DrHardmans_No66_Red_Rescue_Mask.png" alt="Dr Hardman No.66 Red Rescue Mask">
+                 </div>
+            </div>
+        </div>
+     </figure>
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
-                    <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
-                    <h4>BRA FÖR:</h4>
-                    <ul class="ingredienslista">
+     <h2 class="pris">17,00 € *</h2>
+     <p class="small">* Rekopris. I Sverige 160 kr.</p>
+
+     <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
+     <h3>BRA FÖR</h3>
+     <ul class="ingredienslista">
                         <li>Torr kliande hårbotten</li>
                         <li>Fukthållare</li>
                         <li>Rik på antioxidanter</li>
@@ -42,38 +41,34 @@ id: page-66
                         <li>Regenererar åldrande hy och hår</li>
                         <li>Reparerar ytskiktet på hårstrån (cuticle)</li>
                         <li>VEGAN</li>
-                    </ul>
-                    <h4>INGREDIENSER:</h4>
-                    <p>
-                        <a href="/ingredienser">palmolja°*<sup>◆</sup></a>
-                        <a href="/ingredienser">sheasmör°*<sup>◆</sup></a>
-                        <a href="/ingredienser">kakaosmör°*<sup>◆</sup></a>
-                        <a href="/ingredienser">marulaolja°</a>
-                    </p>
+     </ul>
+     <h3>INGREDIENSER</h3>
+     <p>
+                       palmkärneolja°*<sup>◆</sup>
+                       sheasmör°*<sup>◆</sup>
+                       kakaosmör°*<sup>◆</sup>
+                       marulaolja°
+     </p>
 
-                    <p>° Ekologisk
-                        <br>* Rättvis handel
-                        <br><sup>◆</sup> Oraffinerad (raw) råvara
-                    </p>
-                </div>
-            </div>
+     <p class="small">° Ekologisk
+          <br>* Rättvis handel
+          <br><sup>◆</sup> Oraffinerad (raw) råvara
+     </p>
 
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
-                <hr class="primary" />
-                <p>Använd som hårinpackning eller ansiktsmask en gång i månaden eller så ofta det behövs.
-                    <br>Ger torra hårtoppar och kliande hårbotten en superboost! Funkar också bra som tunn ansiktsmask. 20-30 min, gärna i komb. med bastu (hår)/ångbehandling (ansikte).
-                    <br>Masken är orange pga alla karotener den innehåller! Färgar INTE hår eller hud, men nog textiler. Avlägsna från ansiktet med papper och tvätta ur håret med två shamponeringar.
-                    <br> Masken är rik på vitamin A, E, K med 20 gånger mer karotener (antioxidanter) än morötter (per viktenhet)! Doft: svag palmoljedoft.</p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
+
+     <h2 class="om">Om denhär produkten</h2>
+     <hr class="primary" />
+     <p>Använd som hårinpackning eller ansiktsmask en gång i månaden eller så ofta det behövs.
+        <br>Ger torra hårtoppar och kliande hårbotten en superboost! Funkar också bra som tunn ansiktsmask. 20-30 min, gärna i komb. med bastu (hår)/ångbehandling (ansikte).
+         <br>Masken är orange pga alla karotener den innehåller! Färgar INTE hår eller hud, men nog textiler. Avlägsna från ansiktet med papper och tvätta ur håret med två shamponeringar.
+         <br> Masken är rik på vitamin A, E, K med 20 gånger mer karotener (antioxidanter) än morötter (per viktenhet)! Doft: svag palmoljedoft.</p>
+         <p>&nbsp;</p>
+     <h4>DR HARDMANS LIKNANDE PRODUKTER</h4>
+     <p><a href="/no70-lipbalm">No 70 Vanilla-Choko Lip Balm</a>
+                      <br><a href="/no71-lipbalmvitamin">No 71 Vitamin Lip Balm</a>
+                      <br><a href="/no47-pawsandclawsraw">No 47 Paws and Claws hand- och fotkräm utan dofttillsatser</a>
+                      <br><a href="/no48-pawsandclawslavender">No 48 Paws and Claws hand och fotkräm</a>
+                      <br><a href="/no49-pawsandclawsvanilla">No 48 Paws and Claws hand- och fotkräm</a>
+                      <br><a href="/no55-shampoobar">No 55 Shampoo Bar Citrus</a>
+                      <br><a href="/no56-aloeconditioner">No 56 Aloe Vera leave-in hårbalsam</a>
+     </p>
