--- a/no81-lux-soap.html
+++ b/no81-lux-soap.html
@@ -1,9 +1,10 @@
 ---
 layout: page
-type: produkter
+type: hygiene
 title: Lux Soap
 comments: true
 id: page-81
+tag: white
 ---
 
 <section class="padding">
