--- a/no90-refreshing-face-mist.html
+++ b/no90-refreshing-face-mist.html
@@ -1,9 +1,10 @@
 ---
 layout: page
-type: produkter
+type: masks and mists
 title: Refreshing Face Mist
 comments: true
 id: page-90
+tag: white
 ---
 
 <section class="padding">
