--- a/no92-purifying-face-mist.html
+++ b/no92-purifying-face-mist.html
@@ -1,9 +1,10 @@
 ---
 layout: page
-type: produkter
+type: masks and mists
 title: Purifying Face Mist
 comments: true
 id: page-92
+tag: white
 ---
 
 <section class="padding">
