--- a/no93-hydrating-face-mist.html
+++ b/no93-hydrating-face-mist.html
@@ -1,38 +1,38 @@
 ---
 layout: page
-type: produkter
+type: masks and mists
 title: Hydrating Face Mist
 comments: true
 id: page-93
+tag: white
 ---
 
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No93_Hydrating_Face_Mist.png">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 93 Hydrating Face Mist</h1>
-                <h3>Ett återfuktande milt ansiktsvatten för normal, torr eller åldrande hy med väldoftande rosenvatten.<br>Spray eller flipkork, 100ml.</h3>
-                <h1 class="pris">12,00 € *</h1>
-                <p class="small">* Rekopris. I Sverige 120 kr.</p>
-            </div>
-        </div>
-    </div>
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center">Every live thing needs water!</h1>
+
 </section>
+<article class="padding grey">
+    <header> <h1>No 93 Hydrating Face Mist</h1></header>
+        <p>Ett återfuktande milt ansiktsvatten för normal, torr eller åldrande hy med väldoftande rosenvatten.<br>Spray eller flipkork, 100ml.</p>
+              <figure class="produktkort-singel">
+                      <div class="flip-card">
+                          <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                   <img class="img-fluid" src="/img/DrHardmans_No93_Hydrating_Face_Mist.png" alt="Dr Hardman No93 ansiktsvatten">
+                              </div>
+                              <div class="flip-card-back">
+                                   <img class="img-fluid" src="/img/DrHardmans_No93_Hydrating_Face_Mist.png" alt="Dr Hardman No93 ansiktsvatten">
+                              </div>
+                          </div>
+                      </div>
+                 </figure>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
+                <h2 class="pris">12,00 € *</h1>
+                <p class="small">* Rekopris. I Sverige 120 kr.</p>
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
-                    <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
+                    <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
 
-                    <h4>BRA FÖR:</h4>
+                    <h3>BRA FÖR</h3>
                     <ul class="ingredienslista">
                         <li>Normal hy</li>
                         <li>Torr hy</li>
@@ -46,42 +46,31 @@ id: page-93
                         <li>Utan alkohol</li>
                         <li>VEGAN</li>
                     </ul>
-                    <h4>INGREDIENSER:</h4>
+                    <h3>INGREDIENSER</h3>
                     <p>
-                        <a href="/ingredienser">rosenvatten°</a>
-                        <a href="/ingredienser">mineralvatten,</a>
-                        <a  href="/ingredienser">växtbaserat glycerin°</a>
+                        rosenvatten°
+                        mineralvatten,
+                     växtbaserat glycerin°
                     </p>
 
-                    <p>° Ekologisk
+                    <p class="small">° Ekologisk
                         <br>* Rättvis handel
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
 
-                </div>
-            </div>
 
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
+                <h2 class="om">Om denhär produkten</h2>
                 <hr class="primary" />
                 <p>Dr Hardmans fuktande och regenererande ansiktsvatten kan användas när som helst på dagen och passar bäst normal, torr eller åldrande hy. Använd som normalt ansiktsvatten efter hudrengöring och före serum/olja/fuktkräm eller spraya på ansiktet som "mellanmål" då huden känns torr.</p>
-                <p>En välfuktad hud kan bättre ta åt sig de aktiva ingredienserna i Dr Hardmans <a href="/agedefence">krämer</a>, <a href="/rosebodybutter">bodybutters</a> och <a href="/serendipity">hudoljor</a>. Rosenvatten är antibakteriellt, antiinflammatoriskt och innehåller rikligt med vitaminer, tanniner och pektin. Det jämnar ut mörka fläckar och rynkor, renar huden och gör den fast. Glycerin är en humektant som motverkar vattenavdunstningen från hudens yta. En regenererande och fuktande ansiktsvattenspray är perfekt att ha med på kontoret, på flygresor och konferenser där luften är dålig eller luftkonditioneringen gör luften väldigt torr.</p>
+                <p>En välfuktad hud kan bättre ta åt sig de aktiva ingredienserna i Dr Hardmans <a href="/no44-agedefence">krämer</a>, <a href="/no26-rosebodybutter">bodybutters</a> och <a href="/no32-serendipity">hudoljor</a>. Rosenvatten är antibakteriellt, antiinflammatoriskt och innehåller rikligt med vitaminer, tanniner och pektin. Det jämnar ut mörka fläckar och rynkor, renar huden och gör den fast. Glycerin är en humektant som motverkar vattenavdunstningen från hudens yta. En regenererande och fuktande ansiktsvattenspray är perfekt att ha med på kontoret, på flygresor och konferenser där luften är dålig eller luftkonditioneringen gör luften väldigt torr.</p>
                 <p><strong>För en djupfuktande fem minuters ansiktsbehandling</strong>, leta rätt på en muslinduk eller annan tunn trasa/tygnäsduk. Passa den över ansiktet och klipp hål åtminstone för näsan. Blöt duken med ordentlig mängd ansiktsvatten och klappa fast den våta duken över ansiktet. Spraya på mer ansiktsvatten om duken inte hålls på plats. Behandlingen passar för alla hudtyper och kan göras fast varje dag.
-                    <br>Efter 5 min djupfuktning, lägg gärna genast på en Dr Hardmans <a href="/serendipity">hudolja</a> eller <a href="/agedefence">ansiktskräm.</a></p>
+                    <br>Efter 5 min djupfuktning, lägg gärna genast på en Dr Hardmans <a href="/no32-serendipity">hudolja</a> eller <a href="/no44-agedefence">ansiktskräm.</a></p>
                 <p>Dr Hardmans ansiktsvatten är gjorda på ekologiska blomvatten som inte innehåller alkohol eller konserveringsmedel. De är alltid tillverkade färska för försäljning och förpackade i steriliserade flaskor. Produkten bör helst förvaras i kylskåp, skyddat från dagsljus och förbrukas inom 4-6 veckor. Ett kallt ansiktsvatten är också mer effektivt än ett varmt för att dra ihop porer och verka uppfriskande. Använd gärna direkt från kylen!</p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/no90-refreshing-face-mist">No 90 Refreshing Face Mist för alla hudtyper</a>
-                    <br><a href="/no92-purifying-face-mist">No 92 Purifying Face Mist för blandhy och fet hy</a>
+                <h4>Dr Hardmans tvättprodukter</h4>
+                 <a href="/no80-gentle-face-wash-powder">No 80 Ansiktstvättpulver</a>
+                 <br><a href="/no81-lux-soap">No 81 Lux soap ansiktstvål</a>
                 </p>
-                <div
-                    class="fb-like"
-                    data-share="true"
-                    data-width="450"
-                    data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
+                <h4>Dr Hardmans ansiktsmasker</h4>
+                 <p><a href="/no66-redrescuemask">No 66 Red Rescue Mask hårinpackning/ ansiktsmask</a>
+                 <br><a href="/no67-cleansing-and-hydrating-face-mask">No 67 Renande och fuktande lermask</a>
+                 </p>
